# codpilot-cli

./: .gitignore  README.md  pyproject.toml
app/agents/: feature_agent.py  pr_review_agent.py  suggestion_agent.py
app/agents/tools/: github_mcp.py
app/cli/: inputs.py  llm.py  main.py  spinner.py
app/cli/commands/: run.py  version.py
app/services/: build_model_service.py
app/workflows/: agent_workflow.py
src/agents/: feature_agent.py  pr_review_agent.py  suggestion_agent.py
src/agents/tools/: github_mcp.py
src/cli/: inputs.py  llm.py  main.py  spinner.py
src/cli/commands/: run.py  version.py
src/services/: runner_service.py
src/workflows/: agent_workflow.py
