[project]
name = "codpilot"
version = "0.1.3"
description = "A multi-agent CLI tool that integrates with GitHub to review PRs, create features, and suggest changes."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["cli", "github", "codpilot", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "google-adk>=1.24.0",
    "keyring>=25.7.0",
    "litellm>=1.81.11",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[project.scripts]
codpilot = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
